test/Harper/Tests/Bad/ConflictingVariantDeclarations_BetweenDifferentTypes.har
value List a = {
  variant Empty = { };
};

value Bag a b c d = {
  variant Empty = { };
  variant Bag = {
    data = {
      a :: a; a :: b; c :: c; c :: d;
    }
  };
};


main :: Integer;
main = 42;